<resources>
    <string name="app_name">Iris</string>
    <string name="logo">logo</string>
    <string name="search">Поиск</string>
    <string name="stock">Акции</string>

    <!--Строковые значения для Navigation drawer-->
    <string name="action_settings">Настройки</string>
    <string name="drawer_item_home">Домой</string>
    <string name="drawer_item_hair">Волосы</string>
    <string name="drawer_item_nails">Ногти</string>
    <string name="drawer_item_eyebrows">Глаза</string>
    <string name="drawer_item_bodyface">Лицо и Тело</string>
    <string name="drawer_item_epilation">Эпиляция</string>
    <string name="drawer_item_men">Мужское</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_contact">Обратная связь</string>

    <!--Разделы первого состояния-->
    <string name="hair">Волосы</string>
    <string name="nails">Ногти</string>
    <string name="eyebrows">Глаза</string>
    <string name="bodyface">Лицо и Тело</string>
    <string name="epilation">Эпиляция</string>
    <string name="men">Мужское</string>

    <!--Блок ногти-->
    <string name="manicure">Маникюр</string>
    <string name="pedicure">Педикюр</string>
    <string name="nail">Покрытие ногтей</string>
    <string name="spa_care">SPA-уход</string>
    <string name="nail_extention">Наращивание ногтей</string>
    <string name="select_service">Выберите услугу...</string>
    <string name="select_serviceOne">Выберите раздел...</string>

    <!--Блок глаза-->
    <string name="makeup">Макияж</string>
    <string name="eye_color">Окрашивание</string>
    <string name="eyebrow_shape">Оформление бровей</string>
    <string name="eyelash">Наращивание ресниц</string>
    <string name="eye_curling">Завивка ресниц</string>
    <string name="mascara">Полуперманентная тушь</string>
    <string name="eye_tattoo">Татуаж</string>
    <string name="makeup_perm">Перманентный макияж</string>

    <!--Для третьего состояния-->
    <string name="service_hint">Выберите услугу...</string>
    <string name="block_name" >Название услуги..</string>
    <string name="comm_text">0</string>
    <string name="rare_letter">Рейтинг:</string>
    <string name="rate_show">/10</string>
    <string name="cost_show">Цена:</string>
    <string name="salon_comm">256</string>
    <string name="add_favor">add_favor</string>
    <string name="salon_info">salon_info</string>
    <string name="iris_name">IRIS</string>
    <string name="empty">Пока что нет салонов, предоставляющих данную услугу...</string>
    <string name="phone_number" />
    <string name="warning">Проверьте подключение к сети Интернет и повторите попытку.</string>
    <string name="warn">Внимание!</string>
    <string name="txt_name">Large Text</string>


    <!--Для четвертого состояния-->
    <string name="txtName">Знатный салон имени Гайдая</string>
    <string name="txtAddress">ул. Красноармейская, 25</string>
    <string name="txtMode">Пн-Сб: 09.00-21.00 Вс: 10.00-17.00</string>
    <string name="txtRating">4,5</string>
    <string name="txtComm">14</string>
    <string name="txtPhone">566556</string>
    <string name="txtPhoneNum">Телефон:</string>


</resources>
