<?xml version="1.0" encoding="utf-8"?>
<!--Фрагмент для 2 состояния блока "Ногти". Находится слева,
//на нем расположены кнопки "Маникюр", "Наращивание ногтей" и т.д.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    style="@style/layout_body"
    android:layout_weight="1"
    android:baselineAligned="false"
    android:id="@+id/nails_body_left"
    android:divider="@drawable/separator"
    android:showDividers="middle|end"
    android:focusable="true">

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple_manicure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <Button
        android:text="@string/manicure"
        android:id="@+id/manicure"
        style="@style/ButtonsSecond"
        android:onClick="onClick"/>
        <!--android:background="@drawable/button_press"-->

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple_pedicure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button
        android:text="@string/pedicure"
        android:id="@+id/pedicure"
        style="@style/ButtonsSecond"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple_shellac"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:text="@string/nail"
        android:id="@+id/nail"
        style="@style/ButtonsSecond"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/ripple_nail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        style="@style/ButtonsSecond"
        android:text="@string/nail_extention"
        android:id="@+id/nail_extention"/>

    </com.balysv.materialripple.MaterialRippleLayout>

    <!--Тень под тулбар-->
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@drawable/toolbar_dropshadow"
        android:id="@+id/view" />
</LinearLayout>